# research-library-engine

./: LICENSE.md  README.md  __init__.py  pyproject.toml
app/backend/: db.py  fts.py  ingest.py  main.py  models.py  projects.py  search.py  tags_notes.py
app/backend/dedup/: __init__.py  normalize.py  report.py  similarity.py
app/backend/export/: __init__.py  bibtex.py  csv_export.py  ieee.py  markdown.py
app/frontend/: app.js  index.html  styles.css
cli/: rle.py
docs/: architecture.md
exports/: bibtex.py  csv_export.py  ieee.py  library.md
